// Copyright 2019 Citra Digital Lintas
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package cdl.toldatatest;
option go_package = "test";
import "github.com/darmawan01/toldata/toldata.proto";
import "google/protobuf/descriptor.proto";

extend google.protobuf.ServiceOptions {
  string rest_mount = 999999;
}

message TestARequest {
    string input = 1; 
    int64 id = 2;
}

message TestAResponse {
    string output = 1;
    int64 id = 2;
}

message FeedDataRequest {
    int64 data = 1;
}

message FeedDataResponse {
    int64 sum = 1;
}

message StreamDataRequest {
    int64 id = 1;
}

message StreamDataResponse {
    int64 data = 1;
}

message TestGetIPResponse {
    string ip = 1;
}
service TestService {
    option (rest_mount)= "/api/test";
    rpc GetTestA(TestARequest) returns (TestAResponse) {}
    rpc GetTestAB(TestARequest) returns (TestAResponse) {}
    rpc GetTestGetIP(toldata.Empty) returns (TestGetIPResponse) {}

    rpc FeedData(stream FeedDataRequest) returns (FeedDataResponse) {}
    rpc StreamData(StreamDataRequest) returns (stream StreamDataResponse) {}
    rpc StreamDataAlt1(StreamDataRequest) returns (stream StreamDataResponse) {}

    rpc TestEmpty(toldata.Empty) returns (toldata.Empty) {}
}
